[gd_scene load_steps=3 format=3 uid="uid://b3cdrcsichfl5"]

[ext_resource type="Script" uid="uid://blwqirx5p1v7x" path="res://ui/FinancialPanel.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.1, 0.1, 0.1, 0.92)
border_color = Color(0.45, 0.45, 0.45, 0.9)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="FinancialPanel" type="CanvasLayer"]
visible = false
script = ExtResource("1")

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 180.0
offset_top = 120.0
offset_right = 1740.0
offset_bottom = 920.0
theme_override_styles/panel = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label_IS" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.74, 0.18, 1)
theme_override_font_sizes/font_size = 28
text = "INCOME STATEMENT"

[node name="IncomeGrid" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 6
columns = 2

[node name="Label_BS" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45, 0.8, 1, 1)
theme_override_font_sizes/font_size = 28
text = "BALANCE SHEET"

[node name="BalanceGrid" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 6
columns = 2

[node name="Label_CF" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.6, 1)
theme_override_font_sizes/font_size = 28
text = "CASH FLOW STATEMENT"

[node name="CashGrid" type="GridContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 6
columns = 2

[node name="CommentaryInput" type="TextEdit" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 110)
wrap_mode = 1
autowrap_mode = 2
placeholder_text = "Type your analysis hereâ€¦ (relationships between IS, BS, CF; margin drivers; working capital notes; risks/opportunities)"

[node name="SubmitButton" type="Button" parent="PanelContainer/VBoxContainer"]
text = "Submit Analysis"
size_flags_horizontal = 4

[node name="CloseButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Close"
